# kdevcpprefactor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kdev-cpp-clang-refactor.kdev4  kdevcppclangrefactor.desktop  kdevcppclangrefactor.desktop.cmake  kdevcpprefactor.desktop.cmake  kdevcpprefactor.kdev4  refactorplugin.cpp  refactorplugin.h  sourcemodificationsapplier.cpp  sourcemodificationsapplier.hpp
Test/: CMakeLists.txt  refactorTester.cpp  refactorTester.hpp
ui/: extractfunctiondialog.cpp  extractfunctiondialog.h  extractfunctiondialog.ui
